[metadata]
author = Jesse Schwartzentruber
author_email = truber@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Testing
description = A context-free grammar file generator
keywords = fuzz fuzzing test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = avalanche
url = https://github.com/MozillaSecurity/avalanche

[options]
include_package_data = True
packages =
    avalanche
python_requires = >=3.5
zip_safe = False

[options.entry_points]
console_scripts =
    avalanche = avalanche.core:main
    avalanche.lint = avalanche.lint:main

[options.extras_require]
dev =
    pre-commit
    tox
